--- a/package.json
+++ b/package.json
@@ -81,13 +81,16 @@
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "classnames": "^2.3.2",
+    "prop-types": "^15.8.1",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "simple-ajax": "^2.6.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "dependencies": {
+    "react-dom": "^18.2.0",
     "classnames": "^2.3.2",
     "prop-types": "^15.8.1",
     "react-redux": "^8.0.4",
