--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-multi-menu-child",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "A ready / simple to use, highly customizable, updateable, ajax supported, animated and material designed menu component for React",
   "main": "lib/index.js",
   "scripts": {
@@ -81,20 +81,17 @@
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "classnames": "^2.3.2",
-    "prop-types": "^15.8.1",
-    "react-redux": "^8.0.4",
-    "redux": "^4.2.0",
-    "simple-ajax": "^2.6.0"
+    "webpack-dev-server": "^4.11.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "prop-types": "^15.8.1",
     "react-redux": "^8.0.4",
-    "redux": "^4.2.0",
-    "simple-ajax": "^2.6.0"
+    "redux": "^4.2.0"
   }
 }
